fix flicker on load

--- a/src/components/index/introduction.module.scss
+++ b/src/components/index/introduction.module.scss
@@ -5,13 +5,8 @@
   height: 100%;
 }
 
-.cardContent {
-  padding: 10px;
-}
-
 .cardHeader {
   text-align: center;
-  font-size: 1.4em;
 }
 
 .button {
